--- a/package.json
+++ b/package.json
@@ -13,32 +13,35 @@
   "license": "ISC",
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@vendia/serverless-express": "^4.3.9",
     "axios": "^0.21.1",
-    "dayjs": "^1.10.5",
+    "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "serverless-offline": "^7.0.0",
+    "serverless-plugin-typescript-express": "^1.0.8",
     "underscore": "^1.13.1",
     "uuid": "^8.3.2",
-    "uuidv4": "^6.2.10"
+    "uuidv4": "^6.2.11"
   },
   "devDependencies": {
-    "@types/express": "^4.17.12",
-    "@types/express-validator": "^3.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/underscore": "^1.11.2",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
     "@types/axios-mock-adapter": "^1.10.0",
+    "@types/express": "^4.17.13",
+    "@types/express-validator": "^3.0.0",
+    "@types/jest": "^26.0.24",
+    "@types/underscore": "^1.11.3",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "axios-mock-adapter": "^1.19.0",
-    "eslint": "^7.29.0",
+    "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
-    "jest": "^27.0.4",
-    "jest-mock-extended": "^1.0.16",
+    "jest": "^27.0.6",
+    "jest-mock-extended": "^1.0.18",
     "prettier": "2.3.2",
-    "ts-jest": "^27.0.3",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.3.4"
+    "ts-jest": "^27.0.4",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.3.5"
   }
 }
