fix: test script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest --watchAll --verbose --coverage",
+    "test": "jest",
+    "test-dev": "jest --watchAll --verbose --coverage",
     "start": "tsnd --respawn --transpile-only --ignore-watch node_modules src/server/server.ts"
   },
   "keywords": [],
